add initial glossary support; ui updates
